--- a/docs/05-s01-lab01a.md
+++ b/docs/05-s01-lab01a.md
@@ -123,7 +123,7 @@
 <div>
 <span style = "float: right;">**Megan Montgomery jumping for joy**</span>
 <br>
-<img src="images/Megan_sub.jpg"> 
+<img src="images/Megan_sub.JPG"> 
 </div>
 
 
