--- a/docs/03-s01-lab01a.md
+++ b/docs/03-s01-lab01a.md
@@ -1,4 +1,3 @@
-
 # Poems, Letters & Stories {-}
 
 In this section you will find poems, letters & stories that people submitted to represent their dissertations, their year, and their experiences!
@@ -31,7 +30,7 @@ In this section you will find poems, letters & stories that people submitted to 
 <p>In first year, leaves were hues of red, orange, pink salt <br> So bright, we fluttered towards them like moths<br> -zing, too hot, we tried to not get burnt<br> but it was muddy, and we had no wellies.<br></p>
 <p>In second year, we vowed<br> this was gonna be the year<br> we were gonna join at least one society,<br> go out at least once a month, and - make friends.<br></p>
 <p>But the nights were longer than the days,<br> Hogwarts cold and grey and hungry, and loneliness<br> as desperate to be our friend as we were supposed to be for a night at Hive.<br></p>
-<p>But- it wasn’t all bad<br> We fell in love, ungracefully,<br> and marched the cities veins<br> in big and bold colours<br> with bigger and bolder people.<br></p>
+<p>But- it wasn't all bad<br> We fell in love, ungracefully,<br> and marched the cities veins<br> in big and bold colours<br> with bigger and bolder people.<br></p>
 <p>In third year, we hopscotched on rooftops<br> And watched the city empty and fill its dirty lungs.<br> We liked the gentleness of warm afternoons in the park, and<br> The blatant optimism of bare legs on sunny days.<br> But we didn’t like the hustle;<br> It pulled up wobbly skyscrapers in our chests.<br> Nevertheless, as days got warmer, we relaxed into what we were<br> And not who we could become.<br></p>
 <p>In fourth year,<br> -we hid.<br> From looming decisions about medium-sized futures,<br> From the D-word and an invisible sleeping dragon.<br> We had promised ourselves yet again<br> To take it all in this year, our last year,<br> As our attention waivered from one lecture to the next Instagram story.<br></p>
 <p>But the dragon awoke<br> Breathing fire on mistakes and memories to be made,<br> Leaving shreds of fear and regrets.<br> Why had we not made more time?<br> The tree outside my window whispers:<br> Because you did not give yourself permission to.<br></p>
