--- a/docs/07-s01-lab01a.md
+++ b/docs/07-s01-lab01a.md
@@ -1,5 +1,4 @@
-
-# All the Best {-}
+# A Fond Farewell from Our Director of Learning and Teaching {-}
 
 <img src="images/dissertationBanner.JPG">
 
@@ -7,21 +6,3 @@
 
 <div style = "text-align:center">**Don't be strangers, stay in touch, and if you ever need us, we will be right there waiting to help!**</div>
 
-
----
-
-<div align = "center">
-<img height = "80%" width = "80%" src="images/GraceFurnell_NextChapter.png"> 
-<br>
-<span style = "float: right;">**The Next Chapter by Grace Furnell**</span>
-</div>
-
----
-
-You can find the Spotify playlist through this link with all the tunes that represent the year for you.....keep dancing! <a href = "https://open.spotify.com/playlist/6i6xlSxYP5aI1r7swY9aIj?si=tkYSh4izR3aw9VcPyzcAGA" target = "_blank">GUPsych2020 playlist</a>
-
----
-
-The idea for this Yearbook originated with Dr Heather Cleland Woods but was brought to life by Dr Phil McAleer. Thanks Phil, the students and I are truly grateful. HCW, July 2020. 
-
----
