--- a/07-s01-lab01a.Rmd
+++ b/07-s01-lab01a.Rmd
@@ -1,8 +1,8 @@
-# A Fond Farewell from Our Director of Learning and Teaching {-}
+# A Fond Farewell from Prof Stack {-}
 
-<img src="images/dissertationBanner.JPG">
+<img src="images/niamh.png" style="width: 200px; float: right;">
 
----
+Insert text
 
-<div style = "text-align:center">**Don't be strangers, stay in touch, and if you ever need us, we will be right there waiting to help!**</div>
+
 
