--- a/docs/08-s01-lab01a.md
+++ b/docs/08-s01-lab01a.md
@@ -1,10 +1,12 @@
-# We wish you well {-}
+# Our Door Is Always Open {-}
 
-<img src="images/dissertationBanner.JPG">
+
+<img src="images/Cloisters.png" style="width: 400px;>
+
 
 ---
 
-<div style = "text-align:center">**Don't be strangers, stay in touch, and if you ever need us, we will be right there waiting to help!**</div>
+<div style = "text-align:center">**Don't be strangers, stay in touch, and keep us updated on your journeys**</div>
 
 
 ---
