--- a/08-s01-lab01a.Rmd
+++ b/08-s01-lab01a.Rmd
@@ -1,10 +1,7 @@
-# We wish you well {-}
+# Our Door Is Always Open {-}
 
-<img src="images/dissertationBanner.JPG">
 
----
-
-<div style = "text-align:center">**Don't be strangers, stay in touch, and if you ever need us, we will be right there waiting to help!**</div>
+<img src="images/Cloisters.png" style="width: 400px;>
 
 
 ---
