I remembered to render first woop!

--- a/docs/04-s01-lab01m.md
+++ b/docs/04-s01-lab01m.md
@@ -167,7 +167,7 @@
 
 **Name:** Emma McKeever
 
-**Supervisor:** NA NA
+**Supervisor:** Linda Moxey
 
 **Title:** Assessing an individual’s future pro-environmental behaviour
 
