--- a/08-s01-lab01a.Rmd
+++ b/08-s01-lab01a.Rmd
@@ -1,12 +1,14 @@
 # Our Door Is Always Open {-}
 
 
-<img src="images/Cloisters.png" style="width: 400px;>
-
+<img src="images/Cloisters.png" style="width: 200px;">
 
 ---
 
-You can find the Spotify playlist through this link with all the tunes that represent the year for you.....keep dancing! <a href = "https://open.spotify.com/playlist/6i6xlSxYP5aI1r7swY9aIj?si=tkYSh4izR3aw9VcPyzcAGA" target = "_blank">GUPsych2020 playlist</a>
+You can find the Spotify playlist through this link with all the tunes that represent the year for you.....keep dancing!   
+
+
+<a href = "https://open.spotify.com/playlist/6i6xlSxYP5aI1r7swY9aIj?si=tkYSh4izR3aw9VcPyzcAGA" target = "_blank">GUPsych2020 playlist</a>
 
 ---
 
@@ -20,4 +22,3 @@ The idea for this Yearbook originated with Dr Heather Cleland Woods but was brou
 <span style = "float: right;">**The Next Chapter by Grace Furnell**</span>
 </div>
 
----
