--- a/docs/08-s01-lab01a.md
+++ b/docs/08-s01-lab01a.md
@@ -1,8 +1,18 @@
 # Our Door Is Always Open {-}
 
 
-<img src="images/Cloisters.png" style="width: 400px;>
+<img src="images/Cloisters.png" style="width: 200px;">
 
+---
+
+You can find the Spotify playlist through this link with all the tunes that represent the year for you.....keep dancing!   
+
+
+<a href = "https://open.spotify.com/playlist/6i6xlSxYP5aI1r7swY9aIj?si=tkYSh4izR3aw9VcPyzcAGA" target = "_blank">GUPsych2020 playlist</a>
+
+---
+
+The idea for this Yearbook originated with Dr Heather Cleland Woods but was brought to life by Dr Phil McAleer. Thanks Phil, the students and I are truly grateful. HCW, July 2020. 
 
 ---
 
@@ -12,12 +22,3 @@
 <span style = "float: right;">**The Next Chapter by Grace Furnell**</span>
 </div>
 
----
-
-You can find the Spotify playlist through this link with all the tunes that represent the year for you.....keep dancing! <a href = "https://open.spotify.com/playlist/6i6xlSxYP5aI1r7swY9aIj?si=tkYSh4izR3aw9VcPyzcAGA" target = "_blank">GUPsych2020 playlist</a>
-
----
-
-The idea for this Yearbook originated with Dr Heather Cleland Woods but was brought to life by Dr Phil McAleer. Thanks Phil, the students and I are truly grateful. HCW, July 2020. 
-
----
