last minute additions

--- a/05-s01-lab01a.Rmd
+++ b/05-s01-lab01a.Rmd
@@ -144,3 +144,16 @@
 </div>
 
 ---
+
+<div>
+<span style = "float: right;">**Maryam Ibrar**</span>
+<br>
+<img src="images/maryam.jpg"> 
+</div>
+
+
+<div>
+<br>
+</div>
+
+---
