--- a/docs/03-s01-lab01a.md
+++ b/docs/03-s01-lab01a.md
@@ -155,3 +155,22 @@ Download a copy of this story by <a href = "images/AnnieRoland_comic.pdf" target
 </div>
 
 --- 
+
+#### From Alexandra Bobchinetskaya {-}
+
+<div class="info3">
+<p><strong>A little note to my dearest UofG friends, </strong></p>
+<p>As with much of my university work, I procrastinated writing this yearbook note. However, this time my procrastination came from having absolutely no clue how to summarise the amazing, crazy, rollercoaster ride of an experience that I had here at UofG, so I’ll keep it simple.</p>
+<p>Thank you everyone at the University of Glasgow for making this place, this community so special. I will never forget how friendly, approachable, and down to earth every single professor, staff member, library security, and student has been.</p>
+<p>Thank you to my dissertation group (Annie, Imogen, Hannah, Lily, and Maryam), I will always remember our cute weekly tea chats and statistics meetings where we shared our code only to find out seconds later that our code doesn’t actually work. You guys made this time so special and so much more enjoyable for me, and I wish you all the best in your amazing and bright futures.</p>
+<p>Thank you to my dissertation supervisor Heather Woods, who not only supported me through my final year, but also encouraged an introvert like me to make the most out of the time I had left here by getting involved and chair my first ever panel event?! I don’t know what came over Heather to trust me to do that but I am so grateful that she did. Get yourself a supervisor who pushes you out of your comfort zone. ;)</p>
+<p>And lastly I want to thank my dearest Ricarda, Bairavi and Maggie, with whom I’ve shared so many laughs and amazing dinner nights that I will never forget. Adamski, my Polish brother, thank you for sharing this weird and testing time with me, though you don’t really have the choice because we literally make the same life decisions anyways. And Isabelle… girl, you are my rock. You’ve been my support from day 1, I am so grateful that I ended up in Flat 6A, I can only hope to be half the friend you were to me.</p>
+<p>I have many others to thank but you know who you are!</p>
+<p><strong>Alexandra (Sasha) Bobchinetskaya</strong></p>
+</div>
+
+<div>
+<br>
+</div>
+
+--- 
