--- a/02-s01-lab01a.Rmd
+++ b/02-s01-lab01a.Rmd
@@ -223,5 +223,16 @@ In this section you will find images and photos that people submitted to represe
 
 ---
 
+<div>
+<span style = "float: right;">**Clare McAteer**</span>
+<br>
+<img src="images/Clare_McA.jpg"> 
+</div>
+
+<div>
+<br>
+</div>
+
+---
 
 
