--- a/05-s01-lab01a.Rmd
+++ b/05-s01-lab01a.Rmd
@@ -159,3 +159,15 @@
 ---
 
 
+<div>
+<span style = "float: right;">**Rebekah Weir**</span>
+<br>
+<img src="images/Rebekah_sub.jpeg"> 
+</div>
+
+
+<div>
+<br>
+</div>
+
+---
